--- a/ScholarshipHub/ScholarshipHub.csproj
+++ b/ScholarshipHub/ScholarshipHub.csproj
@@ -117,11 +117,15 @@
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\UniversityController.cs" />
     <Compile Include="Controllers\UniversityOfferController.cs" />
+    <Compile Include="Repository\UniversityOfferRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IOrganisationRepository.cs" />
+    <Compile Include="Interfaces\IOrganizationOfferRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IStudentRepository.cs" />
+    <Compile Include="Interfaces\IUniversityOfferRepository.cs" />
     <Compile Include="Interfaces\IUniversityRepository.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Models\ApplicationsToOrganization.cs">
@@ -171,6 +175,8 @@
       <DependentUpon>ScholarshipHubModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\OrganisationRepository.cs" />
+    <Compile Include="Repository\OrganizationOfferRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Repository\StudentRepository.cs" />
     <Compile Include="Repository\UniversityRepository.cs" />
@@ -194,6 +200,12 @@
     <Content Include="Views\University\Edit.cshtml" />
     <Content Include="Views\Registration\Index.cshtml" />
     <Content Include="Views\Registration\CreateStudent.cshtml" />
+    <Content Include="Views\Student\Index.cshtml" />
+    <Content Include="Views\Student\Edit.cshtml" />
+    <Content Include="Views\Student\UniversityOffer.cshtml" />
+    <Content Include="Views\Student\OrganizationOffer.cshtml" />
+    <Content Include="Views\Student\Apply.cshtml" />
+    <Content Include="Views\Student\ApplyToUniversity.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -205,7 +217,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Media\Files\" />
     <Folder Include="Media\Images\" />
-    <Folder Include="Views\Student\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
